# tensorflow-crail

./: BUILD  BUILD.crail  MANIFEST.in  README.md  WORKSPACE  build_pip_pkg.sh  setup.py
doc/: app.txt  notes.txt
doc/cmake/: CMakeLists.txt  crail_dataset.cc  crail_dataset.h  crail_dataset.py
scripts/: iterator.py
tensorflow_crail/: BUILD  __init__.py
tensorflow_crail/kernels/: crail_dataset.cc
tensorflow_crail/ops/: crail_ops.cc
tensorflow_crail/python/kernel_tests/: crail_test.py
tensorflow_crail/python/ops/: crail_ops.py
